Use jlink to produce a smaller runtime